# productivity-back

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  config.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
db/: init.sql
db/migrations/: 000001_create_account_table.up.sql  000002_create_todo_table.up.sql
nginx/: default.conf
src/: lib.rs  main.rs
src/account/: account_controllers.rs  account_models.rs  mod.rs
src/actors/: db_actor.rs
src/common/: guards.rs  mod.rs  responses.rs  validators.rs
src/middlewares/: auth.rs
src/todo/: mod.rs  todo_controllers.rs  todo_models.rs
src/todos/: todo_controllers.rs  todo_models.rs
tests/: account_integration_test.rs  common.rs  todo_integration_test.rs
