[package]
name = "productivity-back"
version = "0.1.0"
authors = ["dmitryshur <dimashur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "productivity"
path = "src/lib.rs"

[[bin]]
name = "productivity_bin"
path = "src/main.rs"

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-session = "0.3.0"
actix-service = "1.0.5"
actix-http = "1.0.1"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
postgres = { version = "0.17.1", features = ["with-chrono-0_4"]}
r2d2 = "0.8.8"
r2d2_postgres = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4.0"
env_logger = "0.7.1"
regex = "1.3.5"
redis = "0.15.1"
